--- a/src/wp-content/themes/aiko-master/customStyle.css
+++ b/src/wp-content/themes/aiko-master/customStyle.css
@@ -1,15 +1,17 @@
 @media screen and (min-width: 1024px) {
   .site-inner {
-    width: calc(100% + 190px) !important;
+    max-width: calc(80%) !important;
     display: inline-block !important;
     margin-left: 190px !important;
+    overflow: hidden;
   }
 
   .nav-primary {
     position: fixed !important;
     width: 170px !important;
     top: 102px !important;
-    overflow: auto !important;
+    height: calc(100% - 124px) !important;
+    overflow-y: scroll;
   }
 
   .menu-item
@@ -21,4 +23,34 @@
     .menu-item-4248 {
     height: 50px;
   }
+  
+}
+a.whatsapp-floater{
+    margin: 1em auto;
+    font-size: 0.8em;
+    border-radius: 100%;
+    width: 55px;
+    height: 55px;
+    background: #25d366 url(https://tochat.be/click-to-chat-directory/css/whatsapp.svg) no-repeat center;
+    background-size: 2.6em;
+    float: right;
+    position: fixed;
+    bottom: 12px;
+    right: 20px;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+    z-index: 9;
+    }
+.whatsapp-floater-text{
+    box-shadow: 2px 2px 13px rgba(0,0,0,0.1);
+    border-radius: 5px;
+    background: white;
+    position: fixed;
+    z-index: 9;
+    text-align: center;
+    overflow: hidden;
+    height: 50px;
+    bottom: 24px;
+    right: 85px;
+    border: 1px solid #ddd;
+    width: 150px;
 }
